--- a/SampleMappingProject.Tests/SampleMappingProject.Tests.csproj
+++ b/SampleMappingProject.Tests/SampleMappingProject.Tests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SampleMappingProject.Persistence\SampleMappingProject.Persistence.csproj" />
     <ProjectReference Include="..\SampleMappingProject\SampleMappingProject.csproj" />
     <ProjectReference Include="..\SampleMappingProject.Console\SampleMappingProject.Console.csproj" />
     <ProjectReference Include="..\SampleMappingProject.Commons\SampleMappingProject.Commons.csproj" />
